SEO and Accessibility Improvements

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get inspired with our daily quote generator. Find motivational and inspirational quotes from famous authors and personalities.">
+    <meta name="keywords" content="quotes, inspirational quotes, motivational quotes, quote of the day, daily quotes">
     <title>Quote of the Day</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +14,8 @@
         <blockquote id="quote">Loading...</blockquote>
         <span id="author">Loading...</span>
         <div>
-            <button id="button1" onclick="getQuote()">New Quote</button>
-            <button id="button2" onclick="post()"><img src="x.png" alt="X.com">Post</button>
+            <button id="button1" onclick="getQuote()" aria-label="Generate new quote">New Quote</button>
+            <button id="button2" onclick="post()" aria-label="Share quote on X.com"><img src="x.png" alt="X.com logo">Post</button>
         </div>
     </div>
 
